[package]
name = "locker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
rpassword = "7.2"
aes-gcm = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
sha2 = "0.10"
clipboard-win = "4.5.0"
rand = "0.8"
zeroize = "1"
